fix: stabiliser la compilation  et l'envoi d'e-mails TRANSTU