@@ -2,25 +2,27 @@ package com.transport.reporting.exception;
 
 import com.transport.reporting.common.response.ErrorResponse;
 import jakarta.servlet.http.HttpServletRequest;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.dao.DataAccessException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.multipart.MaxUploadSizeExceededException;
 
-import java.time.Instant;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Gestionnaire global des exceptions REST.
- * <p>
- * Couvre notamment les erreurs métier, la validation Bean Validation
- * et le dépassement des limites multipart ({@link MaxUploadSizeExceededException}).
  */
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+
+    private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
     @ExceptionHandler(ResourceNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleNotFound(ResourceNotFoundException ex, HttpServletRequest request) {
@@ -36,13 +38,16 @@ public class GlobalExceptionHandler {
     public ResponseEntity<ErrorResponse> handleValidation(MethodArgumentNotValidException ex, HttpServletRequest request) {
         List<String> details = ex.getBindingResult().getFieldErrors().stream()
                 .map(error -> error.getField() + " : " + error.getDefaultMessage())
-                .toList();
+                .collect(Collectors.toList());
         return build(HttpStatus.BAD_REQUEST, "Validation error", request.getRequestURI(), details);
     }
 
-    /**
-     * Dépassement des limites Spring {@code spring.servlet.multipart.max-*-size}.
-     */
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<ErrorResponse> handleUnreadable(HttpMessageNotReadableException ex, HttpServletRequest request) {
+        log.warn("JSON illisible sur {} : {}", request.getRequestURI(), ex.getMessage());
+        return build(HttpStatus.BAD_REQUEST, "Requête JSON invalide.", request.getRequestURI(), null);
+    }
+
     @ExceptionHandler(MaxUploadSizeExceededException.class)
     public ResponseEntity<ErrorResponse> handleMaxUpload(MaxUploadSizeExceededException ex, HttpServletRequest request) {
         return build(HttpStatus.PAYLOAD_TOO_LARGE,
@@ -50,19 +55,35 @@ public class GlobalExceptionHandler {
                 request.getRequestURI(), null);
     }
 
+    @ExceptionHandler(DataAccessException.class)
+    public ResponseEntity<ErrorResponse> handleDataAccess(DataAccessException ex, HttpServletRequest request) {
+        log.error("Erreur base de données sur {}", request.getRequestURI(), ex);
+        return build(HttpStatus.INTERNAL_SERVER_ERROR, rootMessage(ex), request.getRequestURI(), null);
+    }
+
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorResponse> handleGeneric(Exception ex, HttpServletRequest request) {
-        return build(HttpStatus.INTERNAL_SERVER_ERROR, "Internal server error", request.getRequestURI(), null);
+        log.error("Erreur non gérée sur {}", request.getRequestURI(), ex);
+        return build(HttpStatus.INTERNAL_SERVER_ERROR, rootMessage(ex), request.getRequestURI(), null);
+    }
+
+    private static String rootMessage(Throwable ex) {
+        Throwable current = ex;
+        while (current.getCause() != null && current.getCause() != current) {
+            current = current.getCause();
+        }
+        String msg = current.getMessage();
+        if (msg == null || msg.isBlank()) {
+            msg = current.getClass().getSimpleName();
+        }
+        if (msg.length() > 400) {
+            msg = msg.substring(0, 400) + "…";
+        }
+        return msg;
     }
 
     private ResponseEntity<ErrorResponse> build(HttpStatus status, String message, String path, List<String> details) {
-        return ResponseEntity.status(status).body(ErrorResponse.builder()
-                .timestamp(Instant.now())
-                .status(status.value())
-                .error(status.getReasonPhrase())
-                .message(message)
-                .path(path)
-                .details(details)
-                .build());
+        return ResponseEntity.status(status).body(
+                ErrorResponse.of(status.value(), status.getReasonPhrase(), message, path, details));
     }
 }
