@@ -7,6 +7,7 @@ import com.transport.reporting.entity.Role;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class RoleMapper {
@@ -27,7 +28,7 @@ public class RoleMapper {
     public RoleResponse toResponse(Role role) {
         List<PermissionResponse> permissions = role.getPermissions() == null
                 ? List.of()
-                : role.getPermissions().stream().map(this::toPermissionResponse).toList();
+                : role.getPermissions().stream().map(this::toPermissionResponse).collect(Collectors.toList());
         return RoleResponse.builder()
                 .roleId(role.getRoleId())
                 .code(role.getCode())
